[gd_scene load_steps=3 format=3 uid="uid://cmpqi480k1oie"]

[ext_resource type="Script" path="res://addons/main.gd" id="1_y0yfx"]
[ext_resource type="Texture2D" uid="uid://lo2grgpf865o" path="res://addons/dialogic/assets/fonts/pcsbanner.jpg" id="3_5idtr"]

[node name="WalletMainControl" type="Control"]
z_index = -10
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_y0yfx")
metadata/_edit_lock_ = true

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color(1, 0.976471, 1, 0.168627)
z_index = -100
texture_filter = 3
layout_mode = 0
offset_left = -20.0
offset_top = -19.0
offset_right = 1275.0
offset_bottom = 715.0
scale = Vector2(0.92, 0.92)
mouse_filter = 2
texture = ExtResource("3_5idtr")

[node name="WalletMain" type="Node2D" parent="."]
z_index = 1000

[node name="WalletTimers" type="Label" parent="WalletMain"]
unique_name_in_owner = true
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = 1024.0
offset_right = 1025.0
offset_bottom = 23.0
grow_horizontal = 0
size_flags_horizontal = 8
size_flags_vertical = 0
metadata/_edit_use_anchors_ = true

[node name="WalletDetails" type="RichTextLabel" parent="WalletMain"]
unique_name_in_owner = true
offset_left = 353.0
offset_top = 53.0
offset_right = 573.0
offset_bottom = 503.0
focus_mode = 2
selection_enabled = true
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="WalletMain"]
anchors_preset = -1
anchor_left = 1.20952
anchor_top = -0.378615
anchor_right = 1.20952
anchor_bottom = -0.378615
offset_left = 331.0
offset_top = 13.0
offset_right = 587.0
offset_bottom = 39.0
text = "  Select Asset/UTXO to join server"
metadata/_edit_use_anchors_ = true

[node name="SetWalletForm" type="Node2D" parent="WalletMain"]

[node name="MnemonicPhrase" type="Node2D" parent="WalletMain/SetWalletForm"]

[node name="PhraseInput" type="TextEdit" parent="WalletMain/SetWalletForm/MnemonicPhrase"]
unique_name_in_owner = true
offset_left = 19.0
offset_top = 53.0
offset_right = 328.0
offset_bottom = 318.0

[node name="Label" type="Label" parent="WalletMain/SetWalletForm/MnemonicPhrase"]
offset_left = 66.0
offset_top = 11.0
offset_right = 276.0
offset_bottom = 37.0
text = "Wallet mnemonic phrase:"
metadata/_edit_use_anchors_ = true

[node name="SetButton" type="Button" parent="WalletMain/SetWalletForm"]
unique_name_in_owner = true
offset_left = 20.0
offset_top = 330.0
offset_right = 124.0
offset_bottom = 384.0
text = "Set wallet"

[node name="GenerateButton" type="Button" parent="WalletMain/SetWalletForm"]
unique_name_in_owner = true
offset_left = 192.0
offset_top = 328.0
offset_right = 328.0
offset_bottom = 385.0
text = "Generate New"

[node name="SendAdaForm" type="Node2D" parent="WalletMain"]

[node name="Recipient" type="Node2D" parent="WalletMain/SendAdaForm"]

[node name="Label" type="Label" parent="WalletMain/SendAdaForm/Recipient"]
offset_left = 28.0
offset_top = 406.0
offset_right = 105.0
offset_bottom = 434.0
text = "Recipient:"

[node name="AddressInput" type="LineEdit" parent="WalletMain/SendAdaForm/Recipient"]
unique_name_in_owner = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 118.0
offset_top = 404.0
offset_right = 348.0
offset_bottom = 435.0
grow_horizontal = 2
grow_vertical = 2

[node name="Amount" type="Node2D" parent="WalletMain/SendAdaForm"]

[node name="Label" type="Label" parent="WalletMain/SendAdaForm/Amount"]
offset_left = 37.0
offset_top = 444.0
offset_right = 104.0
offset_bottom = 470.0
text = "Amount:"
metadata/_edit_use_anchors_ = true

[node name="AmountInput" type="LineEdit" parent="WalletMain/SendAdaForm/Amount"]
unique_name_in_owner = true
offset_left = 118.0
offset_top = 442.0
offset_right = 348.0
offset_bottom = 476.0
text = "5000000"
metadata/_edit_use_anchors_ = true

[node name="Password" type="Node2D" parent="WalletMain/SendAdaForm"]
position = Vector2(0, 37)

[node name="Label" type="Label" parent="WalletMain/SendAdaForm/Password"]
offset_left = 25.0
offset_top = 445.0
offset_right = 104.0
offset_bottom = 471.0
text = "Password:"
metadata/_edit_use_anchors_ = true

[node name="PasswordInput" type="LineEdit" parent="WalletMain/SendAdaForm/Password"]
offset_left = 118.0
offset_top = 442.0
offset_right = 348.0
offset_bottom = 476.0
text = "1234"
metadata/_edit_use_anchors_ = true

[node name="Status" type="Label" parent="WalletMain/SendAdaForm/Password"]
offset_left = 388.0
offset_top = 540.0
offset_right = 428.0
offset_bottom = 563.0
theme_override_colors/font_color = Color(1, 0.501961, 0, 1)
metadata/_edit_use_anchors_ = true

[node name="Buttons" type="Node2D" parent="WalletMain/SendAdaForm"]
position = Vector2(0, 37)

[node name="SendAdaButton" type="Button" parent="WalletMain/SendAdaForm/Buttons"]
unique_name_in_owner = true
z_index = 10
offset_left = 38.0
offset_top = 491.0
offset_right = 122.0
offset_bottom = 522.0
disabled = true
text = "Send ADA
"
metadata/_edit_use_anchors_ = true

[node name="MintTokenButton" type="Button" parent="WalletMain/SendAdaForm/Buttons"]
unique_name_in_owner = true
z_index = 10
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 38.0
offset_top = 538.0
offset_right = 131.0
offset_bottom = 569.0
grow_horizontal = 2
grow_vertical = 2
disabled = true
text = "Mint token
"
metadata/_edit_use_anchors_ = true

[node name="CreateScriptOutput" type="Button" parent="WalletMain/SendAdaForm/Buttons"]
unique_name_in_owner = true
z_index = 10
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 158.0
offset_top = 490.0
offset_right = 322.0
offset_bottom = 521.0
grow_horizontal = 2
grow_vertical = 2
disabled = true
text = "Create script output"
metadata/_edit_use_anchors_ = true

[node name="ConsumeScriptInput" type="Button" parent="WalletMain/SendAdaForm/Buttons"]
unique_name_in_owner = true
z_index = 10
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 146.0
offset_top = 537.0
offset_right = 324.0
offset_bottom = 568.0
grow_horizontal = 2
grow_vertical = 2
disabled = true
text = "Consume  script input"
metadata/_edit_use_anchors_ = true

[node name="JoinServerButton" type="Button" parent="WalletMain/SendAdaForm/Buttons"]
unique_name_in_owner = true
offset_left = 348.0
offset_top = 492.0
offset_right = 576.0
offset_bottom = 559.0
theme_override_font_sizes/font_size = 24
text = "Join Server"

[connection signal="pressed" from="WalletMain/SetWalletForm/SetButton" to="." method="_on_set_button_pressed"]
[connection signal="pressed" from="WalletMain/SetWalletForm/GenerateButton" to="." method="_on_generate_button_pressed"]
[connection signal="pressed" from="WalletMain/SendAdaForm/Buttons/SendAdaButton" to="." method="_on_send_ada_button_pressed"]
[connection signal="pressed" from="WalletMain/SendAdaForm/Buttons/MintTokenButton" to="." method="_on_mint_token_button_pressed"]
[connection signal="pressed" from="WalletMain/SendAdaForm/Buttons/CreateScriptOutput" to="." method="_on_create_script_output_pressed"]
[connection signal="pressed" from="WalletMain/SendAdaForm/Buttons/ConsumeScriptInput" to="." method="_on_consume_script_input_pressed"]
[connection signal="pressed" from="WalletMain/SendAdaForm/Buttons/JoinServerButton" to="." method="_on_join_server_button_pressed"]
